Removidas configurações incompativeis com o Windows